--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,4 +23,7 @@
   .gradient-color {
     @apply bg-gradient-to-r from-sky-500 to-indigo-500;
   }
+  .gradient-color-green {
+    @apply bg-gradient-to-r from-green-600 to-green-400;
+  }
 }
